--- a/projects/example-ng7-lib/src/lib/foo/foo.component.html
+++ b/projects/example-ng7-lib/src/lib/foo/foo.component.html
@@ -1,3 +1,10 @@
-<p>
-  foo works!
-</p>
+<div class="foo-container">
+  <div class="hidden-scroll">
+    <div style="position: relative">
+      <div class="handle" #handle>
+
+      </div>
+    </div>
+  </div>
+  <ng-content></ng-content>
+</div>
