--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <enl-example-ng7-lib></enl-example-ng7-lib>
-<enl-foo></enl-foo>
+<enl-foo>
+    <div *ngFor="let item of DATA" [enlBar]="item.first_name">{{item.first_name}}</div>
+</enl-foo>
