--- a/projects/example-ng7-lib/src/lib/foo/foo.component.html
+++ b/projects/example-ng7-lib/src/lib/foo/foo.component.html
@@ -1,10 +1,10 @@
 <div class="foo-container">
-  <div class="hidden-scroll">
-    <div style="position: relative">
-      <div class="handle" #handle>
+  <div class="hidden-scroll" #handleParent>
+    <div class="handle" #handle>
 
-      </div>
     </div>
   </div>
-  <ng-content></ng-content>
+  <ng-scrollbar>
+    <ng-content></ng-content>
+  </ng-scrollbar>
 </div>
