--- a/projects/example-ng7-lib/src/lib/foo/foo.component.scss
+++ b/projects/example-ng7-lib/src/lib/foo/foo.component.scss
@@ -1,25 +1,30 @@
 .foo-container {
-    max-height: 500px;
-    overflow: auto;
+    height: 500px;
     .hidden-scroll {
         position: absolute;
-        right: 25px;
-        height: 500px;
+        right: 22px;
+        height: 488px;
         transition: border 0.25s linear;
-        min-width: 65px;
-        border: 1px solid transparent;
+        min-width: 65px; // border: 1px solid transparent;
+        z-index: 1;
         .handle {
             transform: scale(0);
-            transition: all 0.25s ease;
+            transition: all 150ms ease-in-out;
             position: absolute;
             background: lightblue;
-            width: 45px;
-            height: 45px;
+            width: 46px;
+            height: 46px;
             border-radius: 50%;
-            right: 10px;
+            top: 6px;
+            right: 20px;
+            bottom: 6px;
+            margin-top: -12px;
+            &.show {
+                transform: scale(1);
+            }
         }
         &:hover {
-            border: 1px solid #ccc;
+            // border: 1px solid #ccc;
             .handle {
                 transform: scale(1);
             }
