[CORE]-basics achieved

--- a/projects/example-ng7-lib/src/lib/foo/foo.component.html
+++ b/projects/example-ng7-lib/src/lib/foo/foo.component.html
@@ -1,10 +1,10 @@
 <div class="foo-container">
-  <div class="hidden-scroll" #handleParent>
+  <!-- <div class="hidden-scroll" #handleParent>
     <div class="handle" #handle>
 
     </div>
-  </div>
-  <ng-scrollbar>
+  </div> -->
+  <ng-scrollbar thumbClass="scroll-thumbs" barClass="scroll-bar">
     <ng-content></ng-content>
   </ng-scrollbar>
 </div>
