--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 // an example of custom style
-$bubble-background-color: red;
+$indicator-background-color: red;
 @import '../projects/example-ng7-lib/src/lib/foo/foo.component.scss';
