--- a/projects/example-ng7-lib/src/lib/foo/foo.component.html
+++ b/projects/example-ng7-lib/src/lib/foo/foo.component.html
@@ -3,11 +3,11 @@
     <ng-content></ng-content>
   </ng-scrollbar>
   <div class="scroll-thumbs-indicator" #scrollThumbsIndicator>
-    <div class="bubble-container-parent">
-      <div class="bubble-container">
-        <div class="bubble" [ngClass]="[options.theme]">
+    <div class="indicator-container-parent">
+      <div class="indicator-container">
+        <div class="indicator" [ngClass]="[options.theme]">
           <div class="background"></div>
-          <div class="text"></div>
+          <div class="text">{{activeCharacter}}</div>
         </div>
       </div>
     </div>
