--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <enl-example-ng7-lib></enl-example-ng7-lib>
 <div style="height: 500px">
-  <ng-scrollbar-indicator thumbClass="scroll-thumbs" barClass="scroll-bar">
+  <ng-scrollbar-indicator thumbClass="scroll-thumbs" barClass="scroll-bar" #indicatorRef [options]="options">
     <div *ngFor="let item of DATA" [enlBar]="item.first_name">{{item.first_name}}</div>
   </ng-scrollbar-indicator>
+  <br>
+  <button (click)="dummy = indicatorRef.goToLetter('a', 500, 'last')">Go to 'A'</button>
+  {{dummy}}
 </div>
