--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
     <div *ngFor="let item of DATA" [enlBar]="item.first_name">{{item.first_name}}</div>
   </ng-scrollbar-indicator>
   <br>
-  <button (click)="dummy = indicatorRef.goToLetter('a', 500, 'last')">Go to 'A'</button>
+  <button (click)="dummy = indicatorRef.goToLetter('a')">Go to 'A'</button>
   {{dummy}}
 </div>
