--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <enl-example-ng7-lib></enl-example-ng7-lib>
-<div style="height: 500px">
-  <ng-scrollbar-indicator thumbClass="scroll-thumbs" barClass="scroll-bar" #indicatorRef [options]="options">
-    <div *ngFor="let item of DATA" [enlBar]="item.first_name">{{item.first_name}}</div>
-  </ng-scrollbar-indicator>
-  <br>
-  <button (click)="dummy = indicatorRef.goToLetter('a')">Go to 'A'</button>
-  {{dummy}}
-</div>
+<ng-scrollbar-indicator #indicatorRef>
+  <div *ngFor="let item of DATA" [enlBar]="item.first_name">{{item.first_name}}</div>
+</ng-scrollbar-indicator>
+<br>
+<button (click)="dummy = indicatorRef.goToLetter('a')">Go to 'A'</button>
+{{indicatorRef.currentCharacterObserver | async}}
